clusters/cl01tl/manifests/postiz/HTTPRoute-postiz-temporal-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postiz-temporal-frontend
  namespace: postiz
  labels:
    app.kubernetes.io/name: postiz-temporal-frontend
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/part-of: postiz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - postiz-temporal-frontend.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: postiz-temporal-frontend
          port: 7243
          weight: 100
